--- a/src/view/components/chatArea/chatArea.scss
+++ b/src/view/components/chatArea/chatArea.scss
@@ -2,6 +2,8 @@
     background-color: #fff;
     display: flex;
     flex-direction: column;
+    border: 1px solid #c0c0c0;
+    margin-top: 10px;
 
     .chat-body {
         height: 600px;
@@ -18,6 +20,10 @@
 
         .text-area-wrapper {
             flex-grow: 2;
+
+            .ant-form-item-extra {
+                text-align: left;
+            }
         }
     }
 
