--- a/src/view/pages/chat/chat.scss
+++ b/src/view/pages/chat/chat.scss
@@ -4,4 +4,9 @@
     .title {
         color: #fff;
     }
+
+    .chat-content-wrapper {
+        background-color: #fff;
+        padding: 10px 20px;
+    }
 }
